[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iminstamastr"
version = "0.0.1"
authors = [
  { name="imtrollmastr (Eddie STOCKTON)", email="eddiestockton420@gmail.com" },
]
description = "Instagram User Finder for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://pyproject-rho.vercel.app/"
"Bug Tracker" = "https://pyproject-rho.vercel.app/"